--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 # terraform-nodejs-app-dynamodb
 
-This module uses Terraform to deploy a NodeJS application using a DynamoDB table 
+This module uses a declarative jenkin pipeline to trigger a Terraform deployment of a NodeJS API using a DynamoDB table and Lambda functions
