--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 # terraform-nodejs-app-dynamodb
 
-This module uses a declarative jenkin pipeline to trigger a Terraform deployment of a NodeJS API using a DynamoDB table and Lambda functions
+This module uses a declarative Jenkins pipeline to trigger a Terraform deployment of a NodeJS API using a DynamoDB table and Lambda functions.
